Removed commented code, Updated containers, Split serialization code into many files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -152,6 +152,12 @@ AddHeaderFile("Introspection.h")
 AddHeaderFile("ManagedArray.h")
 AddHeaderFile("MurmurHash.h")
 AddHeaderFile("Serialization.h")
+AddHeaderFile("SerializationDeserializer.h")
+AddHeaderFile("SerializationPointerTracker.h")
+AddHeaderFile("SerializationPolymorphicCaster.h")
+AddHeaderFile("SerializationSerializer.h")
+AddHeaderFile("SerializationTree.h")
+AddHeaderFile("SerializationUtility.h")
 AddHeaderFile("SortedManagedArray.h")
 AddHeaderFile("SortedVector.h")
 AddHeaderFile("StaticAny.h")
