Fixing some tests in Jenkins and isolated odd failure case. Testing CI again.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -180,6 +180,7 @@ ShowList("Doxygen Input Files:" "\t" "${FoundationDoxFiles}")
 AddJagatiLibrary()
 CreateCoverageTarget(${FoundationLib} "${FoundationSourceFiles}")
 
+AddTestFile("Base64Benchmarks.h")
 AddTestFile("Base64Tests.h")
 AddTestFile("BinaryBufferTests.h")
 AddTestFile("BitFieldToolsTests.h")
