--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,6 +149,7 @@ AddHeaderFile("Base64.h")
 AddHeaderFile("BinaryBuffer.h")
 AddHeaderFile("BinaryFind.h")
 AddHeaderFile("BitFieldTools.h")
+AddHeaderFile("ContainerTools.h")
 AddHeaderFile("CountedPtr.h")
 AddHeaderFile("CommandLine.h")
 AddHeaderFile("FlatMap.h")
@@ -184,6 +185,7 @@ AddTestFile("Base64Benchmarks.h")
 AddTestFile("Base64Tests.h")
 AddTestFile("BinaryBufferTests.h")
 AddTestFile("BitFieldToolsTests.h")
+AddTestFile("ContainerToolsTests.h")
 AddTestFile("CountedPtrBenchmarks.h")
 AddTestFile("CountedPtrTests.h")
 AddTestFile("CommandLineTests.h")
