--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -152,6 +152,7 @@ AddHeaderFile("BitFieldTools.h")
 AddHeaderFile("CountedPtr.h")
 AddHeaderFile("CommandLine.h")
 AddHeaderFile("FlatMap.h")
+AddHeaderFile("FunctionalTools.h")
 AddHeaderFile("Introspection.h")
 AddHeaderFile("ManagedArray.h")
 AddHeaderFile("MurmurHash.h")
@@ -167,6 +168,7 @@ ShowList("Header Files:" "\t" "${FoundationHeaderFiles}")
 AddSourceFile("Base64.cpp")
 AddSourceFile("BinaryBuffer.cpp")
 AddSourceFile("CommandLine.cpp")
+AddSourceFile("FunctionalTools.cpp")
 AddSourceFile("MurmurHash.cpp")
 AddSourceFile("StreamLogging.cpp")
 AddSourceFile("StringTools.cpp")
@@ -189,6 +191,7 @@ AddTestFile("CountedPtrTests.h")
 AddTestFile("CommandLineTests.h")
 AddTestFile("ExceptionTests.h")
 AddTestFile("FlatMapTests.h")
+AddTestFile("FunctionalToolsTests.h")
 AddTestFile("IntrospectionTests.h")
 AddTestFile("ManagedArrayTests.h")
 AddTestFile("ManagedArraySequenceTests.h")
