A partial set of functors for midway review

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,6 +153,11 @@ AddHeaderFile("ContainerTools.h")
 AddHeaderFile("CountedPtr.h")
 AddHeaderFile("CommandLine.h")
 AddHeaderFile("FlatMap.h")
+AddHeaderFile("FunctionalExtras.h")
+#AddHeaderFile("FunctionalFunctors.h")
+AddHeaderFile("FunctionalFunctorsContainerToContainer.h")
+AddHeaderFile("FunctionalFunctorsContainerToData.h")
+AddHeaderFile("FunctionalPipe.h")
 AddHeaderFile("FunctionalTools.h")
 AddHeaderFile("Introspection.h")
 AddHeaderFile("ManagedArray.h")
@@ -169,7 +174,6 @@ ShowList("Header Files:" "\t" "${FoundationHeaderFiles}")
 AddSourceFile("Base64.cpp")
 AddSourceFile("BinaryBuffer.cpp")
 AddSourceFile("CommandLine.cpp")
-AddSourceFile("FunctionalTools.cpp")
 AddSourceFile("MurmurHash.cpp")
 AddSourceFile("StreamLogging.cpp")
 AddSourceFile("StringTools.cpp")
