Incremental updates to the Serialization system.
Moved the test-only simple backend into the Foundation proper.  Move member tags to their own file.  Added lots of documentation all over.  Started implementing support for other stl classes in Serialize functions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,12 +155,14 @@ AddHeaderFile("CountedPtr.h")
 AddHeaderFile("FlatMap.h")
 AddHeaderFile("Introspection.h")
 AddHeaderFile("ManagedArray.h")
+AddHeaderFile("MemberTags.h")
 AddHeaderFile("MurmurHash.h")
 AddHeaderFile("Serialization.h")
 AddHeaderFile("SerializationDeserializer.h")
 AddHeaderFile("SerializationPointerTracker.h")
 AddHeaderFile("SerializationPolymorphicCaster.h")
 AddHeaderFile("SerializationSerializer.h")
+AddHeaderFile("SerializationSimpleBackend.h")
 AddHeaderFile("SerializationTree.h")
 AddHeaderFile("SerializationUtility.h")
 AddHeaderFile("SortedManagedArray.h")
